# golly

./: .gitignore  .gitmodules  README.md  README_EN.md
Scripts/CxxForth/: config.cxxf.fs
Scripts/Embed/: test-snl.efs  test.efs
Scripts/KForth64/: drline.kfs  kf64-snl-expl.4th  kf64-snl.4th  kf64-snn.4th  kf64-tlb.4th  test-rotate.kfs  test-str.kfs  test-xy.kfs  test.kfs  utils.4th
Scripts/LibForth/: test.lfs
gui-wx/: cxxforthconfig.h  wxargs.cpp  wxargs.h  wxatlast.cpp  wxatlast.h  wxcxxforth.cpp  wxcxxforth.h  wxembed.cpp  wxembed.h  wxfile.cpp  wxgforth.cpp  wxgforth.h  wxip1.cpp  wxip1.h  wxkforth64.cpp  wxkforth64.h  wxlibforth.cpp  wxlibforth.h  wxprefs.cpp  wxpython.cpp  wxscript.cpp  wxutils.cpp  wxzforth.cpp  wxzforth.h
gui-wx/configure/: Makefile.am  autogen.sh  configure.ac
